<resources>
    <string name="signUp_btn">Register</string>
    <string name="signIn_btn">Sign In</string>
    <string name="update_btn">Update</string>
    <string name="gps_network_not_enabled">Please Enable Location</string>
    <string name="open_location_settings">Location Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="email_number">Email Address</string>
    <string name="paswd">Password</string>
    <string name="account_create">Create an account?</string>
    <string name="SignUp">\u0020 Sign Up</string>
    <string name="submit">Submit</string>
    <string name="login_txt_or">OR</string>
    <string name="login_error_txt">Please input correct UserName and Password</string>
    <string name="btn_register">Register Now</string>
    <string name="hd_update">Update Profile</string>
    <string name="hd_count">Choose Guest Count</string>
    <string name="cpr_no">ime</string>
    <string name="address">City</string>
    <string name="phno">Phone Number</string>
    <string name="create_acnt">Have an Account?</string>
    <string name="Login">\u0020 Log In.</string>
    <string name="password">Password</string>
    <string name="retype_password">Re-type Password</string>
    <string name="emil_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="fill_txt">Fill the details below</string>
    <string name="permission_location_check">We need this pemission to read documents from device.</string>
    <string name="snack_error_network">Please turn on your net.</string>
    <string name="googleSignText">Sign in with Google</string>
    <string name="fbSignText">Sign in with Facebook</string>
    <string name="snack_error_acct">An account already exists with the same email address but different provider.</string>
    <string name="snack_acc_count_error">Guest cant be less than zero.</string>
    <string name="sign_snack_error_message">An account already exists with the same email address but different provider.</string>
    <string name="sign_snack_ok_button">ok</string>
    <string name="facebook_app_id"> 239095796976592</string>
    <string name="ht_email">Email Address</string>
    <string name="ht_pass3">Password</string>
    <string name="ht_dob">Date Of Birth</string>
    <string name="ht_fname">First Name</string>
    <string name="ht_lname">Last Name</string>
    <string name="name">Name</string>
    <string name="ht_phone">Phone number</string>
    <string name="ht_date_pick">Pick Your Date</string>
    <string name="ht_pass1">Create Password</string>
    <string name="ht_pass2">Confirm Password</string>
    <string name="photo_txt">Add Photo</string>
    <string name="photo_txt2">View and edit profile</string>
    <string name="tv_heading2">Oh! Not Registered Yet?</string>
    <string name="tv_heading3"> Register Now</string>
    <string name="tv_AddContent"> Do you Like this Property?</string>
    <string name="tv_AddContent2"> Book for Verification.</string>
    <string name="otp_no">OTP Number</string>
    <string name="otp_spinner_country">Select Country</string>
    <string name="otp_zip_code_hint">Zip Code</string>
    <string name="otp_mobile_no_hint">Mobile Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="otp_resend">Resend OTP</string>
    <string name="bahrain_code">+973</string>
    <string-array name="country_names">
        <item>Bahrain</item>

    </string-array>
    <string name="terms_and_cond"><![CDATA[Terms & Condition]]></string>
    <string name="cont">\u0020 Continue</string>
    <string name="otp_firsttxt_msg">Enter the OTP receivedon your registered number.</string>
    <string name="otp_secondtxt_msg"><![CDATA[I agree to the Terms & Conditions & Privacy Policy issued. Terms & Condition.]]></string>
    <string name="image_upload_certificate_txt">Please Upload the Document by taking a Picture. and do something with it, please voyager do something.</string>
    <string name="register_msg">Thanks for registering with us. You will get a notification once your profile is approved.</string>
    <string name="approval_btn">Approval Pending</string>
    <string name="approval_msg">Congratulations!!! Your profile is approved. Please click the below button to login for further activities.</string>
    <string name="login_btn">Login</string>
    <string name="sign_out">Sign Out</string>
    <string name="from_destination_hint_text">Where are you going ?</string>
    <string name="to_destination_hint_text">Choose where to drop you</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="drawer_payment">Payment</string>
    <string name="drawer_your_trips">Your Trips</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_update_profile">Update profile</string>
    <string name="action_notification">Notification</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="unknown_warning">Your app has not been downloaded from the PlayStore. Kindly update to the latest version.</string>
    <string name="play_store_warning">unable to find market app</string>
    <string name="share_yourApp_text">Drive Safe with Sayara App.\n  Download Now!\n https://bit.ly/dlSayaraApp </string>
    <string name="your_trip_history">Trip History</string>
    <string name="update_profile">Update Profile</string>
    <string name="help">HELP</string>
    <string name="service_unavailable">Service Unavailable</string>
    <string name="btn_ride_now_txt">Ride Now</string>
    <string name="search_loc">Search location</string>
    <string name="fare">Fare</string>
    <string name="payment">Payment</string>
    <string name="Help">Help</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_paytm">Payment By PayTab</string>
    <string name="payment_cash">Payment By Cash</string>
    <string name="gallery">\u0020 \u0020 \u0020 Gallery</string>
    <string name="camera">\u0020 \u0020 \u0020 Camera</string>
    <string name="cancel">Cancel</string>
    <string name="question_cond">Do you really want to exit ?</string>
    <string name="estimated_money_content">Estimated Cash to Be Paid</string>
    <string name="source_hint">Enter pickup location</string>
    <string name="destination_hint">Where to?</string>
    <string name="accept_txt">Accept</string>
    <string name="reject_txt">Reject</string>
    <string name="heading_text_receipt">Sayara Receipt</string>
    <string name="phone_number_support">9895184339</string>
    <string name="phone_number_customer">9895184339</string>
    <string name="phone_number_emergency">9895184339</string>
    <string name="customize">Customize</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="undo">Undo</string>
    <string name="calender_event">Events</string>
    <string name="calender_no_event">No Events</string>
    <string name="cdrp_mon">Mon</string>
    <string name="cdrp_tue">Tue</string>
    <string name="cdrp_wed">Wed</string>
    <string name="cdrp_thu">Thu</string>
    <string name="cdrp_fri">Fri</string>
    <string name="cdrp_sat">Sat</string>
    <string name="cdrp_sun">Sun</string>
    <string-array name="week_sun_sat">
        <item>@string/cdrp_sun</item>
        <item>@string/cdrp_mon</item>
        <item>@string/cdrp_tue</item>
        <item>@string/cdrp_wed</item>
        <item>@string/cdrp_thu</item>
        <item>@string/cdrp_fri</item>
        <item>@string/cdrp_sat</item>
    </string-array>
    <string name="done">Done</string>
    <string name="title_time_picker">Select Time</string>
    <string name="select_time">Select a Time</string>
    <string name="doSomeWork">doSomeWork</string>
    <string name="operators">Operators</string>
    <string name="networking">Networking</string>
    <string name="pagination">Pagination</string>
    <string name="search">Search</string>
    <string name="simple">Simple</string>
    <string name="map">Map</string>
    <string name="zip">Zip</string>
    <string name="disposable">Disposable</string>
    <string name="take">Take</string>
    <string name="timer">Timer</string>
    <string name="interval">Interval</string>
    <string name="SingleObserver">SingleObserver</string>
    <string name="CompletableObserver">CompletableObserver</string>
    <string name="Flowable">Flowable</string>
    <string name="reduce">Reduce</string>
    <string name="buffer">Buffer</string>
    <string name="filter">Filter</string>
    <string name="skip">Skip</string>
    <string name="scan">Scan</string>
    <string name="replay">Replay</string>
    <string name="concat">Concat</string>
    <string name="merge">Merge</string>
    <string name="defer">Defer</string>
    <string name="distinct">Distinct</string>
    <string name="last">Last</string>
    <string name="replay_subject">ReplaySubject</string>
    <string name="publish_subject">PublishSubject</string>
    <string name="behavior_subject">BehaviorSubject</string>
    <string name="async_subject">AsyncSubject</string>
    <string name="throttle_last">ThrottleLast</string>
    <string name="debounce">Debounce</string>
    <string name="window">Window</string>
    <string name="delay">delay</string>
    <string name="throttle_first">ThrottleFirst</string>
    <string name="flatMapAndFilter">flatMapAndFilter</string>
    <string name="flatMap">flatMap</string>
    <string name="flatMapWithZip">flatMapWithZip</string>
    <string name="click_me">Click Me</string>
    <string name="rx_bus">RxBus</string>
    <string name="compose">Compose for reusable</string>
    <string name="result">Result</string>
    <string name="switch_map">Switch Map</string>
    <string name="take_while">Take While</string>
    <string name="take_until">Take Until</string>
    <string name="calender_btn_text">Save</string>
    <string name="calender_start_date">StartDate</string>
    <string name="calender_end_date">EndDate</string>
    <string name="calender_clear">clear</string>
    <string name="guest_count_btn">continue</string>
    <string name="loc_data_null">Location Data Is not Present.</string>
    <string name="login_facebook">facebook</string>
    <string name="login_google">google</string>
    <string name="login_normal">normal</string>
    <string name="login_facebook_auth_fail">Authentication failed.</string>
    <string name="login_api_normal_response_success">Login Successful</string>
    <string name="price_detail_txt_heading">Booking Price</string>
    <string name="price_detail_txt_guest">Guest</string>
    <string name="price_detail_txt_time_out">Check out</string>
    <string name="price_detail_txt_time_in">Check In</string>
    <string name="price_detail_txt_subTotal">Sub Total</string>
    <string name="price_detail_txt_serviceFee">Service Fee</string>
    <string name="price_detail_txt_hostFee">Host Fee</string>
    <string name="price_detail_txt_securityFee">Security Fee</string>
    <string name="price_detail_txt_cleaningFee">Cleaning Fee</string>
    <string name="price_detail_btn">Confirm Booking</string>
    <string name="user_property_txt_rate_more">view more</string>
    <string name="user_property_txt_heading">User Property</string>
    <string name="landing_tab1_name_txt">Explore</string>
    <string name="landing_tab2_name_txt">Saved</string>
    <string name="landing_tab3_name_txt">Inbox</string>
    <string name="landing_tab4_name_txt">Profile</string>
</resources>